--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,6 @@ body{
     position: fixed;
     }
 
-.wand-row{
-    width:60%;
-    margin-bottom:1%;
-    margin-top:1%;
-    margin-left:20%;
-}
-
 h2{
     font-family: 'Crimson Text', serif;
     text-align:center;
@@ -41,23 +34,263 @@ h3{
     font-size:1em;
 }
 
+.text{margin-top:-1em;}
+
+.text1{margin-top:-.5em;}
+
+/*-------------------*/
+
+.round-wand{margin-bottom:6em;
+    z-index:1;}
+
+#wands-circle{padding-top:3%;}
+
+#wand-hp{
+    position:relative;
+    width:2.5%;
+    left:47%;
+    top:2.75em;
+    }
+
+#wand-hg{
+    position:relative;
+    width:8%;
+    left:46%;
+    top:3.5em;
+    }
+
+#wand-vk{
+    position:relative;
+    width:15%;
+    left:38.75%;
+    top:4.1em;
+    }
+
+#wand-fd{
+    position:relative;
+    width:20%;
+    left:25%;
+    top:6.6em;
+    }
+
+#wand-du{
+    position:relative;
+    width:23%;
+    left:5.5%;
+    top:10.7em;
+    }
+
+#wand-v{
+    position:relative;
+    width:24%;
+    right:17.4%;
+    top:15.2em;
+    }
+
+#wand-bl{
+    position:absolute;
+    width:23%;
+    left:52%;
+    top:54%;
+    }
+
+#wand-dm{
+    position:absolute;
+    width:20%;
+    left:51.5%;
+    top:56%;
+    }
+
+#wand-ss{
+    position:absolute;
+    width:15%;
+    left:50%;
+    top:58%;
+    }
+
+#wand-mm{
+    position:absolute;
+    width:8%;
+    left:49%;
+    top:59.5%;
+    }
+
+#wand-ad{
+    position:relative;
+    width:2.5%;
+    top:26.75em;
+    right:48%;
+    }
+
+#wand-nt{
+    position:relative;
+    width:7.5%;
+    left:39.5%;
+    top:3.3em;
+    }
+
+#wand-rl{
+    position:absolute;
+    width:14.5%;
+    left:31%;
+    top:58.5%;
+    }
+
+#wand-sb{
+    position:absolute;
+    width:19.5%;
+    left:25%;
+    top:56.5%;
+    }
+
+#wand-ll{
+    position:absolute;
+    width:24%;
+    left:20%;
+    top:54.5%;
+    }
+
+#wand-nl{
+    position:absolute;
+    width:25%;
+    left:19%;
+    top:50%;
+    }
+
+#wand-fw{
+    position:absolute;
+    width:24%;
+    left:20%;
+    top:35%;
+    }
+
+#wand-gw{
+    position:absolute;
+    width:20%;
+    left:24.5%;
+    top:22%;
+    }
+
+#wand-gp{
+    position:absolute;
+    width:15%;
+    left:31%;
+    top:12.5%;
+    }
+
+#wand-rw{
+    position:absolute;
+    width:8%;
+    left:39%;
+    top:7%;
+    }
+
+.hvr-pulse:hover, .hvr-pulse:focus, .hvr-pulse:active {
+  -webkit-animation-name:hvr-pulse;
+  animation-name:hvr-pulse;
+  -webkit-animation-duration:10s;
+  animation-duration:10s;
+  -webkit-animation-timing-function:linear;
+  animation-timing-function:linear;
+  -webkit-animation-iteration-count:infinite;
+  animation-iteration-count:infinite;
+}
+
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+/*-------------------*/
+
+.wand-row{
+    width:60%;
+    margin-bottom:1%;
+    margin-top:1%;
+    margin-left:20%;
+}
+
 .odd{
     background-color:#A7A9AC;
-    padding-top:1em;
-    padding-bottom: 1em;
+    padding-top:4em;
+    padding-bottom:4em;
+    }
+
+.odd1{
+    background-color:#A7A9AC;
+    padding-top:2em;
+    padding-bottom:2em;
     }
 
 .even{
-    padding-top:1em;
-    padding-bottom:1em;
+    padding-top:4em;
+    padding-bottom:4em;
     }
 
-.social{
+.download{
+    padding:1em 1em 1em 1em;
+    font-family: 'Raleway', sans-serif;
+    background:#3A246C;
+    display:block;
+    text-decoration:none;
+    color:#FFFFFF;
+    font-size:1.25em;
+    text-align:center;
+    margin:0 auto;
+    width:100px;
+    margin-bottom:0em;
+    }
+
+/*.download:hover {
+    border-bottom: 5px solid #DCB041; }*/
+
+.hvr-underline-from-left {
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  position: relative;
+  overflow: hidden;
+}
+
+.hvr-underline-from-left:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 100%;
+  bottom: 0;
+  background:#DCB041;
+  height: 4px;
+  -webkit-transition-property: right;
+  transition-property: right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
+  right: 0;
+}
+
+.wands{
     font-family: 'Roboto', sans-serif;
 	color:#ffffff;
 	text-decoration:none;
     width:100%;
-    margin-top:1em;
+    margin-top:0em;
     padding-top:1em;
 	}
 
@@ -75,12 +308,8 @@ footer{
 	text-decoration:none;
 		}
 
-a:link{font-size:.9em;
+.fooooter:link{font-size:.9em;
 		color:#DCB041;
 		text-decoration:none;}
 
-a:visited{color:#DCB041;}
-
-/*-------------------*/
-
-
+.fooooter:visited{color:#DCB041;}
