--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,25 @@ body{
     background:#808285;
     }
 
-.name{
-    padding-top:1%;
-    padding-bottom:1%;
-    padding-left:1%;
-    width:15%;
-    position: fixed;
+nav{position:fixed;
+    color:#DCB041;
+	top:0;
+	left:0;
+	margin:0;
+	width:100%;
+	/*background:#414042;*/
+	z-index:2;
+    font-family:'Rochester',cursive;
+    padding-bottom:.5em;
+    padding-top:1em;}
+
+nav a{
+    text-decoration:none;
+    color:#3A246C;
+    padding-left:1em;
+    font-size:1.8em;
     }
+
 
 h2{
     font-family: 'Crimson Text', serif;
@@ -40,93 +52,87 @@ h3{
 
 /*-------------------*/
 
-.round-wand{margin-bottom:6em;
-    z-index:1;}
+.round-wand{
+    position:absolute;
+    margin-bottom:6em;
+    z-index:1;
+    }
 
-#wands-circle{padding-top:3%;}
+#wands-circle{
+    padding-top:4%;
+    position:absolute;
+top: 23em;}
 
 #wand-hp{
-    position:relative;
     width:2.5%;
     left:47%;
-    top:2.75em;
+    top:6%;
     }
 
 #wand-hg{
-    position:relative;
     width:8%;
-    left:46%;
-    top:3.5em;
+    left:48.75%;
+    top:9%;
     }
 
 #wand-vk{
-    position:relative;
     width:15%;
-    left:38.75%;
-    top:4.1em;
+    left:50%;
+    top:10.5%;
     }
 
 #wand-fd{
-    position:relative;
     width:20%;
-    left:25%;
-    top:6.6em;
+    left:51.5%;
+    top:20.5%;
     }
 
 #wand-du{
-    position:relative;
     width:23%;
-    left:5.5%;
-    top:10.7em;
+    left:52%;
+    top:35.75%;
     }
 
 #wand-v{
-    position:relative;
     width:24%;
-    right:17.4%;
-    top:15.2em;
+    left:52.5%;
+    top:50%;
     }
 
 #wand-bl{
-    position:absolute;
     width:23%;
     left:52%;
     top:54%;
     }
 
 #wand-dm{
-    position:absolute;
     width:20%;
     left:51.5%;
     top:56%;
     }
 
 #wand-ss{
-    position:absolute;
     width:15%;
     left:50%;
     top:58%;
     }
 
 #wand-mm{
-    position:absolute;
     width:8%;
     left:49%;
     top:59.5%;
     }
 
 #wand-ad{
-    position:relative;
     width:2.5%;
-    top:26.75em;
-    right:48%;
+    top:60%;
+    left:46.5%;
     }
 
 #wand-nt{
-    position:relative;
     width:7.5%;
     left:39.5%;
-    top:3.3em;
+    top:59.5%;
     }
 
 #wand-rl{
@@ -215,6 +221,9 @@ h3{
 
 /*-------------------*/
 
+.wandbg {position: relative;
+top: 50em;}
+
 .wand-row{
     width:60%;
     margin-bottom:1%;
@@ -232,6 +241,8 @@ h3{
     background-color:#A7A9AC;
     padding-top:2em;
     padding-bottom:2em;
+    position: relative;
+    top:50em;
     }
 
 .even{
@@ -240,6 +251,8 @@ h3{
     }
 
 .download{
+    position: relative;
+    top: 0em;
     padding:1em 1em 1em 1em;
     font-family: 'Raleway', sans-serif;
     background:#3A246C;
@@ -272,7 +285,7 @@ h3{
   right: 100%;
   bottom: 0;
   background:#DCB041;
-  height: 4px;
+  height:8px;
   -webkit-transition-property: right;
   transition-property: right;
   -webkit-transition-duration: 0.3s;
@@ -306,6 +319,8 @@ footer{
 	width:100%;
 	background:#414042;
 	text-decoration:none;
+    position: relative;
+    top: 55em;
 		}
 
 .fooooter:link{font-size:.9em;
