--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,82 @@
 	line-height:1em;
 	}
 
+.opening-door, .opening-door :before, .opening-door :after {
+    box-sizing: border-box;
+}
+
+.opening-door:after {
+    content: ' ';
+    position: absolute;
+    bottom: 0;
+}
+
+.opening-door.frame {
+    width:148.7px; 
+    height: 275px;
+    padding: 13px 13px 0px 13px;
+    perspective: 275px;
+    perspective-origin: 0;
+    cursor: pointer;
+}
+
+.opening-door .door {
+    width: 100%;
+    height: 100%;
+    background:; 
+    transition: all 0.4s ease-in-out;
+    transform-origin: center left;
+    position: relative;
+    z-index: 2;
+}
+
+.opening-door:hover .door {
+    transform: rotateY(35deg);
+    transform-origin: center left;
+}
+
+.opening-door .door:after {
+    content: ' ';
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 0.4s ease-in-out;
+}
+
+.opening-door:hover .door:after {
+    opacity: 1;
+}
+
+.opening-door{
+    width: 16px;
+    height: 6px;
+    border-radius: 4px;
+    position: absolute;
+    top:62.5%;
+    right:44.6%;
+}
+
+.opening-door .handle:after {
+    content: ' ';
+    width: 16px;
+    height: 16px;
+    border-radius: 100%;
+    position: absolute;
+    top: -6px;
+    right: -4px;
+    transition: all 0.4s ease-in-out;
+}
+
+.opening-door:hover .handle:after {
+    width: 24px;
+    right: -15px;
+}
+
+.shop{width:100%;}
+
 body{ 
     max-width:100%;
     min-height:100%;
@@ -32,7 +108,6 @@ nav a{
     font-size:1.8em;
     }
 
-
 h2{
     font-family: 'Crimson Text', serif;
     text-align:center;
@@ -50,179 +125,8 @@ h3{
 
 .text1{margin-top:-.5em;}
 
-/*-------------------*/
-
-.round-wand{
-    position:absolute;
-    margin-bottom:6em;
-    z-index:1;
-    }
-
-#wands-circle{
-    padding-top:4%;
-    position:absolute;
-top: 23em;}
-
-#wand-hp{
-    width:2.5%;
-    left:47%;
-    top:6%;
-    }
-
-#wand-hg{
-    width:8%;
-    left:48.75%;
-    top:9%;
-    }
-
-#wand-vk{
-    width:15%;
-    left:50%;
-    top:10.5%;
-    }
-
-#wand-fd{
-    width:20%;
-    left:51.5%;
-    top:20.5%;
-    }
-
-#wand-du{
-    width:23%;
-    left:52%;
-    top:35.75%;
-    }
-
-#wand-v{
-    width:24%;
-    left:52.5%;
-    top:50%;
-    }
-
-#wand-bl{
-    width:23%;
-    left:52%;
-    top:54%;
-    }
-
-#wand-dm{
-    width:20%;
-    left:51.5%;
-    top:56%;
-    }
-
-#wand-ss{
-    width:15%;
-    left:50%;
-    top:58%;
-    }
-
-#wand-mm{
-    width:8%;
-    left:49%;
-    top:59.5%;
-    }
-
-#wand-ad{
-    width:2.5%;
-    top:60%;
-    left:46.5%;
-    }
-
-#wand-nt{
-    width:7.5%;
-    left:39.5%;
-    top:59.5%;
-    }
-
-#wand-rl{
-    position:absolute;
-    width:14.5%;
-    left:31%;
-    top:58.5%;
-    }
-
-#wand-sb{
-    position:absolute;
-    width:19.5%;
-    left:25%;
-    top:56.5%;
-    }
-
-#wand-ll{
-    position:absolute;
-    width:24%;
-    left:20%;
-    top:54.5%;
-    }
-
-#wand-nl{
-    position:absolute;
-    width:25%;
-    left:19%;
-    top:50%;
-    }
-
-#wand-fw{
-    position:absolute;
-    width:24%;
-    left:20%;
-    top:35%;
-    }
-
-#wand-gw{
-    position:absolute;
-    width:20%;
-    left:24.5%;
-    top:22%;
-    }
-
-#wand-gp{
-    position:absolute;
-    width:15%;
-    left:31%;
-    top:12.5%;
-    }
-
-#wand-rw{
-    position:absolute;
-    width:8%;
-    left:39%;
-    top:7%;
-    }
-
-.hvr-pulse:hover, .hvr-pulse:focus, .hvr-pulse:active {
-  -webkit-animation-name:hvr-pulse;
-  animation-name:hvr-pulse;
-  -webkit-animation-duration:10s;
-  animation-duration:10s;
-  -webkit-animation-timing-function:linear;
-  animation-timing-function:linear;
-  -webkit-animation-iteration-count:infinite;
-  animation-iteration-count:infinite;
-}
-
-.hvr-grow {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px transparent;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-}
-
-.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
-}
-
-/*-------------------*/
-
 .wandbg {position: relative;
-top: 50em;}
+top:0em;}
 
 .wand-row{
     width:60%;
@@ -242,7 +146,7 @@ top: 50em;}
     padding-top:2em;
     padding-bottom:2em;
     position: relative;
-    top:50em;
+    top:0em;
     }
 
 .even{
@@ -265,9 +169,6 @@ top: 50em;}
     width:100px;
     margin-bottom:0em;
     }
-
-/*.download:hover {
-    border-bottom: 5px solid #DCB041; }*/
 
 .hvr-underline-from-left {
   -webkit-transform: perspective(1px) translateZ(0);
@@ -320,7 +221,7 @@ footer{
 	background:#414042;
 	text-decoration:none;
     position: relative;
-    top: 55em;
+    top:0em;
 		}
 
 .fooooter:link{font-size:.9em;
