--- a/css/style.css
+++ b/css/style.css
@@ -227,3 +227,7 @@ footer{
 		text-decoration:none;}
 
 .fooooter:visited{color:#DCB041;}
+
+.leah-link a{
+    color:#fff;
+    text-decoration:none;}
