--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ footer{
     font-size:.9em;
 	color:#DCB041;
 	padding-top:.5em;
-	padding-bottom:1em;
+	padding-bottom:.5em;
 	text-align:center;
 	left:0;
 	margin:0;
