--- a/css/style.css
+++ b/css/style.css
@@ -111,12 +111,18 @@ h3{
 }
 
 p{
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Crimson Text', serif;
     text-align:center;
-    font-size:1.2em;
+    font-size:2em;
     padding-left:20%;
     padding-right:20%;
-    margin-bottom:2%;}
+    line-height:1.7em;
+    
+}
+
+.feel-free{
+    margin-bottom:4%;
+}
 
 .text{margin-top:-1em;}
 
@@ -152,8 +158,8 @@ top:0em;}
     }
 
 .even1{
-    padding-bottom:1.5em;
-    padding-top:5em;
+    padding-bottom:1.9em;
+    padding-top:4em;
 }
 
 .download{
