--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@
     perspective:275px;
     perspective-origin: 0;
     cursor: pointer;
+    top:62.2%;
+    right:44.41%;
 }
 
 .opening-door .door {
@@ -51,22 +53,6 @@
     transition: all 0.4s ease-in-out;
 }
 
-.opening-door:hover .door:after {
-    opacity: 1;
-}
-
-.opening-door{
-    position: absolute;
-    top:62.2%;
-    right:44.41%;
-}
-
-.opening-door .handle:after {
-    content: ' ';
-    border-radius: 100%;
-    position: absolute;
-    transition: all 0.4s ease-in-out;
-}
 
 .shop{width:100%;}
 
@@ -230,11 +216,15 @@ footer{
 	text-decoration:none;
     position: relative;
     top:0em;
+    font-weight:normal;
 		}
 
-.fooooter:link{font-size:.9em;
-		color:#DCB041;
-		text-decoration:none;}
+.fooooter:link{
+    font-size:.9em;
+    color:#DCB041;
+	text-decoration:none;
+    
+    }
 
 .fooooter:visited{color:#DCB041;}
 
